Move sln files up a directory

--- a/src/solutions/nuget.config
+++ b/src/solutions/nuget.config
@@ -2,6 +2,6 @@
 
 <configuration>
   <config>
-    <add key="repositoryPath" value="$\..\..\..\external\packages" />
+    <add key="repositoryPath" value="$\..\..\external\packages" />
   </config>
 </configuration>
