--- a/src/projects/FileLister/FileLister.csproj
+++ b/src/projects/FileLister/FileLister.csproj
@@ -112,6 +112,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="..\..\solutions\VersionInfo.cs">
+      <Link>VersionInfo.cs</Link>
+    </Compile>
     <Compile Include="Model\DirectoriesModel.cs" />
     <Compile Include="Model\MultiFileLister.FileListerSettings.cs" />
     <Compile Include="Paths.cs" />
