Move settings up in app Added missing proj updates from previous commit

--- a/src/shared/Common/Common.csproj
+++ b/src/shared/Common/Common.csproj
@@ -90,6 +90,7 @@
     <Compile Include="IO\FileWatcher.cs" />
     <Compile Include="IO\IOUtilities.cs" />
     <Compile Include="IO\Listener.cs" />
+    <Compile Include="IO\SourceDestinationPaths.cs" />
     <Compile Include="IO\SyncthingWatcher.cs" />
     <Compile Include="Logging\Log.cs" />
     <Compile Include="Logging\NotifyAppender.cs" />
