--- a/src/shared/FilebotApi/FilebotApi.csproj
+++ b/src/shared/FilebotApi/FilebotApi.csproj
@@ -69,10 +69,13 @@
     <Compile Include="..\..\solutions\VersionInfo.cs">
       <Link>VersionInfo.cs</Link>
     </Compile>
+    <Compile Include="Filebot.ActionType.cs" />
     <Compile Include="FileBot.cs" />
+    <Compile Include="FileBotOrganizeEventArgs.cs" />
+    <Compile Include="Result\OrganizeResult.cs" />
     <Compile Include="FileBotLogParser.cs" />
     <Compile Include="FilebotRecords.cs" />
-    <Compile Include="FileBotResult.cs" />
+    <Compile Include="Result\FileBotResult.cs" />
     <Compile Include="FilebotSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Result\FilebotFileResult.cs" />
