--- a/src/projects/SyncWatcherTray/app.config
+++ b/src/projects/SyncWatcherTray/app.config
@@ -25,6 +25,18 @@
             <setting name="LastSelectedTabIndex" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="SeriesDirectory" serializeAs="String">
+                <value>F:\videos\TV Shows</value>
+            </setting>
+            <setting name="MovieDirectory" serializeAs="String">
+                <value>F:\videos\Movies</value>
+            </setting>
+            <setting name="CompletedDirectory" serializeAs="String">
+                <value>D:\Unsorted\completed</value>
+            </setting>
+            <setting name="MediaRootDirectory" serializeAs="String">
+                <value>F:\Videos</value>
+            </setting>
         </SyncWatcherTray.Properties.Settings>
     </userSettings>
 </configuration>
