--- a/src/shared/FilebotApi/FilebotApi.csproj
+++ b/src/shared/FilebotApi/FilebotApi.csproj
@@ -82,7 +82,7 @@
     <Compile Include="Result\RenameResult.cs" />
     <Compile Include="Result\SkipResult.cs" />
     <Compile Include="FilebotHelpers.cs" />
-    <Compile Include="ViewModel\LocalCleanerViewModel.cs" />
+    <Compile Include="ViewModel\ViewModel\LocalCleanerViewModel.cs" />
     <Compile Include="View\FilebotSkippedView.xaml.cs">
       <DependentUpon>FilebotSkippedView.xaml</DependentUpon>
     </Compile>
