Added sticky autoclean setting

--- a/src/projects/SyncWatcherTray/app.config
+++ b/src/projects/SyncWatcherTray/app.config
@@ -37,6 +37,9 @@
             <setting name="MediaRootDirectory" serializeAs="String">
                 <value>F:\Videos</value>
             </setting>
+            <setting name="IsAutoCleanEnabled" serializeAs="String">
+                <value>False</value>
+            </setting>
         </SyncWatcherTray.Properties.Settings>
     </userSettings>
 </configuration>
