--- a/src/projects/SyncWatcherTray/Properties/Settings.settings
+++ b/src/projects/SyncWatcherTray/Properties/Settings.settings
@@ -35,5 +35,8 @@
     <Setting Name="MediaRootDirectory" Type="System.String" Scope="User">
       <Value Profile="(Default)">F:\Videos</Value>
     </Setting>
+    <Setting Name="IsAutoCleanEnabled" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
