Add Pacs Scan enabled checkbox to turn on/off plex scanning

--- a/src/projects/SyncWatcherTray/app.config
+++ b/src/projects/SyncWatcherTray/app.config
@@ -40,6 +40,9 @@
             <setting name="IsAutoCleanEnabled" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="IsPlexScanEnabled" serializeAs="String">
+                <value>True</value>
+            </setting>
         </SyncWatcherTray.Properties.Settings>
     </userSettings>
 </configuration>
