--- a/src/projects/SyncWatcherTray/SyncWatcherTray.csproj
+++ b/src/projects/SyncWatcherTray/SyncWatcherTray.csproj
@@ -35,8 +35,7 @@
     <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>
-    </ApplicationIcon>
+    <ApplicationIcon>coffeeGreenBusy.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
     <DebugSymbols>true</DebugSymbols>
@@ -159,6 +158,7 @@
     </Compile>
     <Resource Include="build\assemblies.txt" />
     <Content Include="build\Extensions\CakeExtensions.dll" />
+    <Resource Include="coffeeGreenBusy.ico" />
     <Content Include="WinSCP.exe">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
