--- a/src/projects/SyncWatcherTray/packages.config
+++ b/src/projects/SyncWatcherTray/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
 <packages>
   <package id="CommonServiceLocator" version="2.0.2" targetFramework="net461" />
+  <package id="Extended.Wpf.Toolkit" version="3.4.0" targetFramework="net461" />
   <package id="FontAwesome.WPF" version="4.7.0.9" targetFramework="net461" />
   <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.8" targetFramework="net452" />
   <package id="log4net" version="2.0.8" targetFramework="net452" />
