Broke out app settings to user control

--- a/src/projects/SyncWatcherTray/SyncWatcherTray.csproj
+++ b/src/projects/SyncWatcherTray/SyncWatcherTray.csproj
@@ -136,6 +136,9 @@
     <Compile Include="View\LocalCleanerView.xaml.cs">
       <DependentUpon>LocalCleanerView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="View\SettingsView.xaml.cs">
+      <DependentUpon>SettingsView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\SyncWatcherSettingsView.xaml.cs">
       <DependentUpon>SyncWatcherSettingsView.xaml</DependentUpon>
     </Compile>
@@ -155,6 +158,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="View\SettingsView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="View\SyncWatcherSettingsView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
