--- a/src/shared/WinScpApi/WinScpApi.csproj
+++ b/src/shared/WinScpApi/WinScpApi.csproj
@@ -98,9 +98,8 @@
     <Compile Include="FtpClient.cs" />
     <Compile Include="FtpManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\SessionConfig.cs" />
     <Compile Include="Properties\SessionConfig.Designer.cs">
-      <DependentUpon>SessionConfig.cs</DependentUpon>
+      <DependentUpon>SessionConfig.settings</DependentUpon>
     </Compile>
     <Compile Include="ViewModel\FtpDirectoryViewModel.cs" />
     <Compile Include="ViewModel\FtpFilesystemItemViewModel.cs" />
