--- a/src/shared/FilebotApi/app.config
+++ b/src/shared/FilebotApi/app.config
@@ -10,6 +10,9 @@
     </configSections>
     <userSettings>
         <FilebotApi.Properties.Settings>
+            <setting name="ActionTypeString" serializeAs="String">
+                <value>MOVE</value>
+            </setting>
             <setting name="Clean" serializeAs="String">
                 <value>True</value>
             </setting>
@@ -30,9 +33,6 @@
             </setting>
             <setting name="IsNonStrict" serializeAs="String">
                 <value>True</value>
-            </setting>
-            <setting name="Action" serializeAs="String">
-                <value />
             </setting>
         </FilebotApi.Properties.Settings>
     </userSettings>
