Code cleanup shared

--- a/src/shared/FilebotApi/app.config
+++ b/src/shared/FilebotApi/app.config
@@ -1,49 +1,56 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
+
 <configuration>
-    <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="FilebotApi.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-        </sectionGroup>
-        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="FilebotApi.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-        </sectionGroup>
-    </configSections>
-    <userSettings>
-        <FilebotApi.Properties.Settings>
-            <setting name="ActionTypeString" serializeAs="String">
-                <value>MOVE</value>
-            </setting>
-            <setting name="Clean" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="DeleteAfterExtract" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="UseExcludeList" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="ExcludeListPath" serializeAs="String">
-                <value>.\filebotexcludes.txt</value>
-            </setting>
-            <setting name="UseLogFile" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="LogFilePath" serializeAs="String">
-                <value>.\filebotlog.txt</value>
-            </setting>
-            <setting name="IsNonStrict" serializeAs="String">
-                <value>True</value>
-            </setting>
-        </FilebotApi.Properties.Settings>
-    </userSettings>
-    <applicationSettings>
-        <FilebotApi.Properties.Settings>
-            <setting name="FilebotBinaries" serializeAs="String">
-                <value>C:\Program Files\FileBot</value>
-            </setting>
-            <setting name="FilebotScriptsDirectory" serializeAs="String">
-                <value>C:\Program Files\FileBot\scripts</value>
-            </setting>
-        </FilebotApi.Properties.Settings>
-    </applicationSettings>
+  <configSections>
+    <sectionGroup name="userSettings"
+                  type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="FilebotApi.Properties.Settings"
+               type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+               allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+    <sectionGroup name="applicationSettings"
+                  type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="FilebotApi.Properties.Settings"
+               type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+               requirePermission="false" />
+    </sectionGroup>
+  </configSections>
+  <userSettings>
+    <FilebotApi.Properties.Settings>
+      <setting name="ActionTypeString" serializeAs="String">
+        <value>MOVE</value>
+      </setting>
+      <setting name="Clean" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="DeleteAfterExtract" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="UseExcludeList" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="ExcludeListPath" serializeAs="String">
+        <value>.\filebotexcludes.txt</value>
+      </setting>
+      <setting name="UseLogFile" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="LogFilePath" serializeAs="String">
+        <value>.\filebotlog.txt</value>
+      </setting>
+      <setting name="IsNonStrict" serializeAs="String">
+        <value>True</value>
+      </setting>
+    </FilebotApi.Properties.Settings>
+  </userSettings>
+  <applicationSettings>
+    <FilebotApi.Properties.Settings>
+      <setting name="FilebotBinaries" serializeAs="String">
+        <value>C:\Program Files\FileBot</value>
+      </setting>
+      <setting name="FilebotScriptsDirectory" serializeAs="String">
+        <value>C:\Program Files\FileBot\scripts</value>
+      </setting>
+    </FilebotApi.Properties.Settings>
+  </applicationSettings>
 </configuration>
