Code cleanup: syncwatchertray

--- a/src/projects/SyncWatcherTray/app.config
+++ b/src/projects/SyncWatcherTray/app.config
@@ -1,33 +1,37 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
+
 <configuration>
-    <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="SyncWatcherTray.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-        </sectionGroup>
-    </configSections>
-    <userSettings>
-        <SyncWatcherTray.Properties.Settings>
-            <setting name="LastRemotePath" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="AutoConnectFtp" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="LastSelectedTabIndex" serializeAs="String">
-                <value>0</value>
-            </setting>
-            <setting name="CompletedDirectory" serializeAs="String">
-                <value>D:\Unsorted\completed</value>
-            </setting>
-            <setting name="MediaRootDirectory" serializeAs="String">
-                <value>F:\Videos</value>
-            </setting>
-            <setting name="IsAutoCleanEnabled" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="IsPlexScanEnabled" serializeAs="String">
-                <value>True</value>
-            </setting>
-        </SyncWatcherTray.Properties.Settings>
-    </userSettings>
+  <configSections>
+    <sectionGroup name="userSettings"
+                  type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="SyncWatcherTray.Properties.Settings"
+               type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+               allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
+  <userSettings>
+    <SyncWatcherTray.Properties.Settings>
+      <setting name="LastRemotePath" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="AutoConnectFtp" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="LastSelectedTabIndex" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="CompletedDirectory" serializeAs="String">
+        <value>D:\Unsorted\completed</value>
+      </setting>
+      <setting name="MediaRootDirectory" serializeAs="String">
+        <value>F:\Videos</value>
+      </setting>
+      <setting name="IsAutoCleanEnabled" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="IsPlexScanEnabled" serializeAs="String">
+        <value>True</value>
+      </setting>
+    </SyncWatcherTray.Properties.Settings>
+  </userSettings>
 </configuration>
