--- a/src/projects/SyncWatcherTray/Properties/Settings.settings
+++ b/src/projects/SyncWatcherTray/Properties/Settings.settings
@@ -1,5 +1,7 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="SyncWatcherTray.Properties" GeneratedClassName="Settings">
+
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)"
+              GeneratedClassNamespace="SyncWatcherTray.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="LastRemotePath" Type="System.String" Scope="User">
