--- a/src/shared/Common/Common.csproj
+++ b/src/shared/Common/Common.csproj
@@ -120,6 +120,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Framework\WatermarkAdorner.cs" />
     <Compile Include="Framework\WatermarkService.cs" />
+    <Compile Include="Win32\SafeNativeMethods.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
