--- a/src/shared/FilebotApi/FilebotApi.csproj
+++ b/src/shared/FilebotApi/FilebotApi.csproj
@@ -100,6 +100,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="Result\FilebotFileResultEventArgs.cs" />
     <Compile Include="Result\OrganizeResult.cs" />
     <Compile Include="FileBotLogParser.cs" />
     <Compile Include="FilebotLog.cs" />
