--- a/src/shared/FilebotApi/FilebotApi.csproj
+++ b/src/shared/FilebotApi/FilebotApi.csproj
@@ -94,6 +94,7 @@
     </Compile>
     <Compile Include="Filebot.ActionType.cs" />
     <Compile Include="FileBot.cs" />
+    <Compile Include="FilebotHistory.cs" />
     <Compile Include="FileBotOrganizeEventArgs.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -103,7 +104,6 @@
     <Compile Include="Result\FilebotFileResultEventArgs.cs" />
     <Compile Include="Result\OrganizeResult.cs" />
     <Compile Include="FileBotLogParser.cs" />
-    <Compile Include="FilebotLog.cs" />
     <Compile Include="Result\FileBotResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Result\FilebotFileResult.cs" />
