--- a/src/shared/FilebotApi/FilebotApi.csproj
+++ b/src/shared/FilebotApi/FilebotApi.csproj
@@ -106,7 +106,7 @@
     <Compile Include="FileBotLogParser.cs" />
     <Compile Include="Result\FileBotResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Result\FilebotFileResult.cs" />
+    <Compile Include="Result\RenameResultEventArgs.cs" />
     <Compile Include="Result\RenameResult.cs" />
     <Compile Include="Result\SkipResult.cs" />
     <Compile Include="Settings.cs" />
