--- a/src/projects/SyncWatcherTray/Config/log4net.config
+++ b/src/projects/SyncWatcherTray/Config/log4net.config
@@ -13,7 +13,7 @@
     <layout type="log4net.Layout.PatternLayout">
       <param name="Header" value="[Header]\r\n" />
       <param name="Footer" value="[Footer]\r\n" />
-      <param name="ConversionPattern" value="%d %m%n" />
+      <param name="ConversionPattern" value="%m%n" />
     </layout>
   </appender>
 
