Update default path

--- a/src/projects/SyncWatcherTray/app.config
+++ b/src/projects/SyncWatcherTray/app.config
@@ -21,7 +21,7 @@
         <value>0</value>
       </setting>
       <setting name="CompletedDirectory" serializeAs="String">
-        <value>D:\Unsorted\completed</value>
+        <value>D:\sync</value>
       </setting>
       <setting name="MediaRootDirectory" serializeAs="String">
         <value>F:\Videos</value>
