Made debug log sticky

--- a/src/projects/SyncWatcherTray/app.config
+++ b/src/projects/SyncWatcherTray/app.config
@@ -32,6 +32,9 @@
       <setting name="IsPlexScanEnabled" serializeAs="String">
         <value>True</value>
       </setting>
+      <setting name="IsDebugLogEnabled" serializeAs="String">
+        <value>True</value>
+      </setting>
     </SyncWatcherTray.Properties.Settings>
   </userSettings>
 </configuration>
