--- a/src/shared/Common/app.config
+++ b/src/shared/Common/app.config
@@ -4,12 +4,18 @@
   <configSections>
     <sectionGroup name="userSettings"
                   type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="Common.Properties.NotifyAppenderSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
       <section name="Common.SFTP.SessionConfig"
                type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
                allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
   </configSections>
   <userSettings>
+    <Common.Properties.NotifyAppenderSettings>
+      <setting name="IsDebugEnabled" serializeAs="String">
+        <value>False</value>
+      </setting>
+    </Common.Properties.NotifyAppenderSettings>
     <Common.SFTP.SessionConfig>
       <setting name="HistoryFilePath" serializeAs="String">
         <value>..\\..\\history.xml</value>
