--- a/src/projects/SyncWatcherTray/Properties/Settings.settings
+++ b/src/projects/SyncWatcherTray/Properties/Settings.settings
@@ -23,5 +23,8 @@
     <Setting Name="IsPlexScanEnabled" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="IsDebugLogEnabled" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
