--- a/.gitignore
+++ b/.gitignore
@@ -332,3 +332,4 @@ src/build/tools/
 src/projects/SyncWatcherTray/build/tools/
 /src/external/packages
 src/projects/tools/CakeExtensions/build/tools/
+src/shared/build/inspect/tools/
