Update ignores and test file

--- a/.gitignore
+++ b/.gitignore
@@ -334,3 +334,4 @@ src/projects/SyncWatcherTray/build/tools/
 src/projects/tools/CakeExtensions/build/tools/
 src/shared/build/inspect/tools/
 src/projects/CMakeTests/build/
+src/external/build/
