--- a/src/external/CMakeLists.txt
+++ b/src/external/CMakeLists.txt
@@ -15,8 +15,8 @@ add_definitions(
 add_subdirectory (glfw-3.1.2)
 
 include_directories(
-	glfw-3.1.2/include/GLFW/
-	glew-1.13.0/include/
+	glfw/include/GLFW/
+	glew/include/
 )
 
 if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
