--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/external/glfw"]
 	path = src/external/glfw
 	url = https://github.com/glfw/glfw.git
+[submodule "src/external/glew"]
+	path = src/external/glew
+	url = https://github.com/nigels-com/glew.git
